[package]
name = "BuildAlong"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.20.2"
anyhow = "1.0"
clap = "4.5.38"
# clap = {
# 	version = "^4.5.38", 
# 	features=["derive"]
# } # A simple to use, efficient, and full-featured Command Line Argument Parser
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Serde is a framework for serializing and deserializing Rust data structures efficiently and generically.
