[package]
name = "BuildAlong"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.20.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Serde is a framework for serializing and deserializing Rust data structures efficiently and generically.
clap = { version = "4.5.38", features = ["derive"] }
